[metadata]
name = github-action-utils
version = 0.8.0
description = Useful utilities for GitHub Actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saadmk11/github-action-utils
author = Maksudul Haque
author_email = saad.mk112@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = github_action_utils
python_requires = >=3.7.0

[bdist_wheel]
universal = True
